<resources>
    <string name="app_name">GrowBox</string>
    <string name="set_water_schedule">Set Water Schedule</string>
    <string name="water_now">Water now</string>
    <string name="watering_interval">Watering Interval</string>
    <string name="watering_length">Watering length</string>
    <string name="save">Save</string>
    <string name="no_implementation">No Implementation</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
</resources>
