<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/qwerty_q"
        style="@style/qwerty_key"
        android:text="@string/q" />

    <Button
        android:id="@+id/qwerty_w"
        style="@style/qwerty_key"
        android:text="@string/w"/>

    <Button
        android:id="@+id/qwerty_e"
        style="@style/qwerty_key"
        android:text="@string/e"/>

    <Button
        android:id="@+id/qwerty_r"
        style="@style/qwerty_key"
        android:text="@string/r"/>

    <Button
        android:id="@+id/qwerty_t"
        style="@style/qwerty_key"
        android:text="@string/t"/>

    <Button
        android:id="@+id/qwerty_y"
        style="@style/qwerty_key"
        android:text="@string/y"/>

    <Button
        android:id="@+id/qwerty_u"
        style="@style/qwerty_key"
        android:text="@string/u"/>

    <Button
        android:id="@+id/qwerty_i"
        style="@style/qwerty_key"
        android:text="@string/i"/>

    <Button
        android:id="@+id/qwerty_o"
        style="@style/qwerty_key"
        android:text="@string/o"/>

    <Button
        android:id="@+id/qwerty_p"
        style="@style/qwerty_key"
        android:text="@string/p"/>
</LinearLayout>