<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/number_1"
        style="@style/number_row"
        android:text="@string/one"/>

    <TextView
        android:id="@+id/number_2"
        style="@style/number_row"
        android:text="@string/two"/>

    <TextView
        android:id="@+id/number_3"
        style="@style/number_row"
        android:text="@string/three"/>

    <TextView
        android:id="@+id/number_4"
        style="@style/number_row"
        android:text="@string/four"/>

    <TextView
        android:id="@+id/number_5"
        style="@style/number_row"
        android:text="@string/five"/>

    <TextView
        android:id="@+id/number_6"
        style="@style/number_row"
        android:text="@string/six"/>

    <TextView
        android:id="@+id/number_7"
        style="@style/number_row"
        android:text="@string/seven"/>

    <TextView
        android:id="@+id/number_8"
        style="@style/number_row"
        android:text="@string/eight"/>

    <TextView
        android:id="@+id/number_9"
        style="@style/number_row"
        android:text="@string/nine"/>

    <TextView
        android:id="@+id/number_0"
        style="@style/number_row"
        android:text="@string/zero"/>
</LinearLayout>