<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/qwerty_a"
        style="@style/qwerty_key"
        android:text="@string/a"/>

    <Button
        android:id="@+id/qwerty_s"
        style="@style/qwerty_key"
        android:text="@string/s"/>

    <Button
        android:id="@+id/qwerty_d"
        style="@style/qwerty_key"
        android:text="@string/d"/>

    <Button
        android:id="@+id/qwerty_f"
        style="@style/qwerty_key"
        android:text="@string/f"/>

    <Button
        android:id="@+id/qwerty_g"
        style="@style/qwerty_key"
        android:text="@string/g"/>

    <Button
        android:id="@+id/qwerty_h"
        style="@style/qwerty_key"
        android:text="@string/h"/>

    <Button
        android:id="@+id/qwerty_j"
        style="@style/qwerty_key"
        android:text="@string/j"/>

    <Button
        android:id="@+id/qwerty_k"
        style="@style/qwerty_key"
        android:text="@string/k"/>

    <Button
        android:id="@+id/qwerty_l"
        style="@style/qwerty_key"
        android:text="@string/l"/>
</LinearLayout>