<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/qwerty_z"
        style="@style/qwerty_key"
        android:text="@string/z"/>

    <Button
        android:id="@+id/qwerty_x"
        style="@style/qwerty_key"
        android:text="@string/x"/>

    <Button
        android:id="@+id/qwerty_c"
        style="@style/qwerty_key"
        android:text="@string/c"/>

    <Button
        android:id="@+id/qwerty_v"
        style="@style/qwerty_key"
        android:text="@string/v"/>

    <Button
        android:id="@+id/qwerty_b"
        style="@style/qwerty_key"
        android:text="@string/b"/>

    <Button
        android:id="@+id/qwerty_n"
        style="@style/qwerty_key"
        android:text="@string/n"/>

    <Button
        android:id="@+id/qwerty_m"
        style="@style/qwerty_key"
        android:text="@string/m"/>

</LinearLayout>