<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dialog_text_size"
        android:layout_margin="10dp" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/number_1"
            style="@style/number_pad"
            android:text="@string/one"/>

        <Button
            android:id="@+id/number_2"
            style="@style/number_pad"
            android:text="@string/two"/>

        <Button
            android:id="@+id/number_3"
            style="@style/number_pad"
            android:text="@string/three"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/number_4"
            style="@style/number_pad"
            android:text="@string/four"/>

        <Button
            android:id="@+id/number_5"
            style="@style/number_pad"
            android:text="@string/five"/>

        <Button
            android:id="@+id/number_6"
            style="@style/number_pad"
            android:text="@string/six"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/number_7"
            style="@style/number_pad"
            android:text="@string/seven"/>

        <Button
            android:id="@+id/number_8"
            style="@style/number_pad"
            android:text="@string/eight"/>

        <Button
            android:id="@+id/number_9"
            style="@style/number_pad"
            android:text="@string/nine"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/delete"
            android:textSize="@dimen/control_text_size"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/number_0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/number_pad"
            android:text="@string/zero"/>


        <Button
            android:id="@+id/clear_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/clear"
            android:textSize="@dimen/control_text_size"
            android:textStyle="bold"/>

    </LinearLayout>



    <include layout="@layout/dialog_cancel_submit_buttons"/>

</LinearLayout>