<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/watering_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/watering_interval"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/watering_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/watering_length"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
</LinearLayout>